<resources>
    <string name="app_name">OKLA Merchant</string>
    <string name="tab_monitor">Monitor</string>
    <string name="tab_workbench">Workbench</string>
    <string name="tab_mine">Profile</string>
    <string name="tips_account_not_empty">Username cannot be empty</string>
    <string name="tips_psw_not_empty">Password cannot be empty</string>
    <string name="tips_agree_agreement">Please read the User Agreement and Privacy Policy</string>
    <string name="tips_enter_current_psw">Please Enter the Current Password</string>
    <string name="tips_enter_new_psw">Please Enter the New Password</string>
    <string name="tips_enter_new_psw_confirm">Please Re-enter the New Password</string>
    <string name="tips_enter_psw_not_match">The new passwords entered do not match. Please re-enter.</string>
    <string name="tips_psw_update">Password updated.</string>
    <string name="tips_enter_new_psw_error">New password does not meet format requirements. Please verify</string>
    <string name="tips_enter_nickname">Please Enter a Nickname</string>
    <string name="tips_battery_exist">Battery already exists</string>
    <string name="tips_device_exist">Device already exists</string>
    <string name="tips_qrcode_same_as_preone">The QR code is the same as the previous one.</string>
    <string name="tips_vehicle_not_empty">Vehicle cannot be empty</string>
    <string name="tips_battery_not_empty">Battery cannot be empty</string>
    <string name="tips_station_not_empty">Station cannot be empty</string>
    <string name="tips_copid_to_clipboard">Text copied to clipboard</string>
    <string name="tips_enter_correct_email">Please enter a correct format of email</string>
    <string name="tips_end_time_cannot_less_start_time">The end time cannot be less than the start time</string>
    <string name="tips_please_select_time">Please select time</string>
    <string name="tips_no_data">No data</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_sign_in">Log in</string>
    <string name="text_agreement_pre">I have read, and agree to </string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="text_agreement_and">  and </string>
    <string name="text_user_agreement">User Agreement</string>
    <string name="text_platform">Platform</string>
    <string name="text_agent">Distributor</string>
    <string name="text_shop">Shop</string>
    <string name="text_ids">ID: %s</string>
    <string name="text_msg_center">Notification</string>
    <string name="text_psw_change">Change Password</string>
    <string name="text_psw_current">Current Password</string>
    <string name="text_psw_new">New Password</string>
    <string name="text_psw_confirm">Confirm New Password</string>
    <string name="text_language">Language</string>
    <string name="text_about_app">About This App</string>
    <string name="text_psw_enter_tip">Password must be 8–16 characters and contain both numbers and letters/special</string>
    <string name="text_change_nickname">Change Nickname</string>
    <string name="text_dimension">Dimension</string>
    <string name="text_net_weight">Net Weight</string>
    <string name="text_battery">Battery</string>
    <string name="text_station">Station</string>
    <string name="text_batteries">batteries</string>
    <string name="text_stations">stations</string>
    <string name="text_vehicle">Vehicle</string>
    <string name="text_vehicles">vehicles</string>
    <string name="text_battery_sn">Battery SN</string>
    <string name="text_vehicle_sn">Vehicle SN</string>
    <string name="text_station_sn">Station SN</string>
    <string name="text_imei">IMEI</string>
    <string name="text_vin">VIN</string>
    <string name="text_iccid">ICCID</string>
    <string name="text_vcu">VCU</string>
    <string name="text_lockdevid">LOCKDEVID</string>
    <string name="text_battery_total">Battery: %d</string>
    <string name="text_vehicle_total">Vehicle: %d</string>
    <string name="text_station_total">Station: %d</string>
    <string name="text_tracking_number">Tracking Number</string>
    <string name="text_remark">Remark</string>
    <string name="text_submit_success">Submit Successfully</string>
    <string name="text_ship_success_detail">For detailed allocation information, please check the management system.</string>
    <string name="text_document_number">Document Number</string>
    <string name="text_no_user_param">No User Parameters Available</string>
    <string name="text_no_device_param">No Device Parameters Available</string>
    <string name="text_no_userinfo_param">No Rider info</string>
    <string name="text_soc">SOC</string>
    <string name="text_soh">SOH</string>
    <string name="text_cycle">Cycle</string>
    <string name="text_online">Online</string>
    <string name="text_annual_rate">Annual Rate</string>
    <string name="text_payment_plan_periods">%s periods</string>
    <string name="text_rate_plan">%sannual interest rate</string>
    <string name="text_front_and_back_id_photo">Front and Back ID photos</string>
    <string name="text_all_city">All City</string>
    <string name="text_search_history">Search History</string>
    <string name="text_navigation">Navigation</string>
    <string name="text_mileage">Mileage</string>
    <string name="text_all">All</string>
    <string name="text_rider">Rider</string>
    <string name="text_period_num">Period: %d</string>
    <string name="text_user_id">User ID</string>
    <string name="text_device_sn">Device SN</string>
    <string name="text_payment_success">Receiving Payment Successful!</string>
    <string name="text_yesterday">Yesterday</string>
    <string name="text_this_month">This Month</string>
    <string name="text_other_date">Other date</string>
    <string name="text_today">Today</string>
    <string name="text_sn_str">SN: %s</string>
    <string name="text_coordinates_str">Coordinates: %s</string>
    <string name="text_start_time">Start Time</string>
    <string name="text_end_time">End Time</string>
    <string name="text_user_type">User Type</string>
    <string name="text_full_payment">Full Payment</string>
    <string name="text_paid_up">Paid-up</string>
    <string name="text_installment">Installment Payment</string>
    <string name="text_dishonest">Dishonest</string>
    <string name="text_overdue">Overdue</string>
    <string name="text_full_amount">Full amount</string>
    <string name="text_userdetail_installment">Installment</string>
    <string name="text_personal_info">Personal Info</string>
    <string name="text_payment_record">Payment Record</string>
    <string name="text_battery_swap_record">Battery Swap Record</string>
    <string name="text_manual_battery_swap">Manual Swap</string>
    <string name="text_operator_id">Operator ID</string>
    <string name="text_old_battery_sn">Old Battery SN</string>
    <string name="text_new_battery_sn">New Battery SN</string>
    <string name="text_photo">Photo</string>
    <string name="text_registration_time">Registration time</string>
    <string name="text_birthday">Birthday</string>
    <string name="text_phone_number">Phone number</string>
    <string name="text_cash">Cash</string>
    <string name="text_email">Email</string>
    <string name="title_language">Language</string>
    <string name="title_change_psw">Change Password</string>
    <string name="textBatteryDetail">Battery detail</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="monitor_battery_info_navi">Navigation</string>
    <string name="invalid_qr_code">Invalid QR code</string>
    <string name="invalid_station_qr_code">Invalid Station QR code</string>
    <string name="title_message">Message</string>
    <string name="title_edit_info">Edit information</string>
    <string name="title_battery_entry">Battery Entry</string>
    <string name="title_station_entry">Station Entry</string>
    <string name="title_vehicle_entry">Vehicle Entry</string>
    <string name="title_battery_ship">Battery Ship</string>
    <string name="title_ship">Ship</string>
    <string name="title_select_agent">Select Agent</string>
    <string name="title_payment_method">Select Payment</string>
    <string name="title_select_applicant">Select Applicant</string>
    <string name="title_account">Account</string>
    <string name="title_first_name">First Name</string>
    <string name="title_last_name">Last Name</string>
    <string name="title_phone">Phone</string>
    <string name="title_birthday">Birthday</string>
    <string name="title_email">Email</string>
    <string name="title_id_number">NID</string>
    <string name="title_address">Address</string>
    <string name="title_upload_photo">Upload NID Photo</string>
    <string name="title_personal_photo">Personal Photo</string>
    <string name="title_lat_log">Latitude &amp; Longitude</string>
    <string name="title_select_shop">Select Shop</string>
    <string name="title_date">Date</string>
    <string name="title_user">User</string>
    <string name="title_user_detail">User Detail</string>
    <string name="dialog_confirm_submit">Confirm Submission?</string>
    <string name="dialog_battery_content">A total of %s are being submitted for entry. Once submitted, it will be reflected in the system and cannot be revised.</string>
    <string name="dialog_submit_completed">Submission completed</string>
    <string name="dialog_submit_completed_2">Submission completed!</string>
    <string name="dialog_go_to_ship">You need to ship the batteries entered this time to the agent?</string>
    <string name="dialog_go_to_ship_vehicles">You need to ship the vehicles entered this time to the agent?</string>
    <string name="cabinet_opt_cabinet_offline_version">Software version</string>
    <string name="cabinet_opt_cabinet_offline_status">Backup power status</string>
    <string name="cabinet_opt_cabinet_offline_slot">Slot</string>
    <string name="cabinet_opt_cabinet_offline_battery_in_slot">Battery in slot</string>
    <string name="cabinet_opt_cabinet_offline_swap_threshold">Swap threshold</string>
    <string name="cabinet_opt_cabinet_offline_apn">APN</string>
    <string name="cabinet_opt_cabinet_offline_volume">Volume</string>
    <string name="cabinet_opt_cabinet_offline_platform_url">Platform url</string>
    <string name="cabinet_opt_cabinet_offline_gsm_signal">GSM Signal</string>
    <string name="cabinet_opt_cabinet_offline_charger">Communication - Charger</string>
    <string name="cabinet_opt_cabinet_offline_ctrl_sys">Communication - Ctrl System</string>
    <string name="cabinet_opt_cabinet_offline_on_door">O&#038;M door</string>
    <string name="cabinet_opt_cabinet_offline_total_voltage">Total voltage</string>
    <string name="cabinet_opt_cabinet_offline_total_current">Total current</string>
    <string name="cabinet_opt_cabinet_offline_temperature">Temperature</string>
    <string name="cabinet_opt_cabinet_offline_meter">Electricity meter</string>
    <string name="cabinet_opt_cabinet_offline_smoke_alarm">Smoke detector alarm</string>
    <string name="cabinet_opt_cabinet_offline_water_alarm">Water leakage alarm</string>
    <string name="cabinet_opt_cabinet_offline_fan_status">Fan status</string>
    <string name="cabinet_opt_switch_cabinet">Battery Exchange Station</string>
    <string name="cabinet_opt_select_cabinet">Please Select the Battery Exchange Station</string>
    <string name="cabinet_opt_switch_authorization">Authorized Person</string>
    <string name="cabinet_opt_select_authorization">Please Select the Authorized Person</string>
    <string name="cabinet_opt_authorization_date">Authorization Period</string>
    <string name="cabinet_opt_authorization_confirm">Confirm Authorization</string>
    <string name="cabinet_opt_authorization_record">Authorized Records</string>
</resources>