<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_fff5f6f7">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/bg_ffffff_r16"
                    android:orientation="vertical"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.okla.ops.custom.deviceinfo.InformationView
                        android:id="@+id/invGSMSignal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:DeviceInfoTitle="@string/cabinet_opt_cabinet_offline_gsm_signal" />

                    <com.okla.ops.custom.deviceinfo.InformationView
                        android:id="@+id/invCharger"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:DeviceInfoTitle="@string/cabinet_opt_cabinet_offline_charger" />

                    <com.okla.ops.custom.deviceinfo.InformationView
                        android:id="@+id/invCtrlSystem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:DeviceInfoTitle="@string/cabinet_opt_cabinet_offline_ctrl_sys"
                        app:isShowLine="false" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/bg_ffffff_r16"
                    android:orientation="vertical"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp">

                    <com.okla.ops.custom.deviceinfo.InformationView
                        android:id="@+id/invOMDoor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:DeviceInfoTitle="@string/cabinet_opt_cabinet_offline_on_door" />

                    <com.okla.ops.custom.deviceinfo.InformationView
                        android:id="@+id/invTotalVoltage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:DeviceInfoTitle="@string/cabinet_opt_cabinet_offline_total_voltage" />

                    <com.okla.ops.custom.deviceinfo.InformationView
                        android:id="@+id/invTotalCurrent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:DeviceInfoTitle="@string/cabinet_opt_cabinet_offline_total_current" />

                    <com.okla.ops.custom.deviceinfo.InformationView
                        android:id="@+id/invTemperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:DeviceInfoTitle="@string/cabinet_opt_cabinet_offline_temperature" />

                    <com.okla.ops.custom.deviceinfo.InformationView
                        android:id="@+id/invElectricityMeter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:DeviceInfoTitle="@string/cabinet_opt_cabinet_offline_meter"
                        app:isShowLine="false" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_ffffff_r16"
                    android:orientation="vertical"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.okla.ops.custom.deviceinfo.InformationView
                        android:id="@+id/invSmokeDetectorAlarm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:DeviceInfoTitle="@string/cabinet_opt_cabinet_offline_smoke_alarm" />

                    <com.okla.ops.custom.deviceinfo.InformationView
                        android:id="@+id/invWaterLeakageAlarm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:DeviceInfoTitle="@string/cabinet_opt_cabinet_offline_water_alarm" />

                    <com.okla.ops.custom.deviceinfo.InformationView
                        android:id="@+id/invFanStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:DeviceInfoTitle="@string/cabinet_opt_cabinet_offline_fan_status"
                        app:isShowLine="false" />

                </LinearLayout>

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
