<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_fff5f6f7">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/bg_ffffff_r16"
                    android:orientation="vertical"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.okla.ops.custom.deviceinfo.InformationView
                        android:id="@+id/invSoftwareVersion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:DeviceInfoTitle="@string/cabinet_opt_cabinet_offline_version" />

                    <com.okla.ops.custom.deviceinfo.InformationView
                        android:id="@+id/invBackupPowerStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:DeviceInfoTitle="@string/cabinet_opt_cabinet_offline_status" />

                    <com.okla.ops.custom.deviceinfo.InformationView
                        android:id="@+id/invSlot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:DeviceInfoTitle="@string/cabinet_opt_cabinet_offline_slot" />

                    <com.okla.ops.custom.deviceinfo.InformationView
                        android:id="@+id/invBatteryInSlot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:DeviceInfoTitle="@string/cabinet_opt_cabinet_offline_battery_in_slot"
                        app:isShowLine="false" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llCabinet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/bg_ffffff_r16"
                    android:orientation="vertical"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp">

                    <com.okla.ops.custom.deviceinfo.InformationView
                        android:id="@+id/invSwapThreshold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:DeviceInfoTitle="@string/cabinet_opt_cabinet_offline_swap_threshold"
                        app:addRightArrow="true" />

                    <com.okla.ops.custom.deviceinfo.InformationView
                        android:id="@+id/invAPN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:DeviceInfoTitle="@string/cabinet_opt_cabinet_offline_apn"
                        app:addRightArrow="true" />

                    <com.okla.ops.custom.deviceinfo.InformationView
                        android:id="@+id/invVolume"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:DeviceInfoTitle="@string/cabinet_opt_cabinet_offline_volume"
                        app:addRightArrow="true" />

                    <com.okla.ops.custom.deviceinfo.InformationView
                        android:id="@+id/invPlatformURL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:DeviceInfoTitle="@string/cabinet_opt_cabinet_offline_platform_url"
                        app:addRightArrow="true"
                        app:isShowLine="false" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
