<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/includeTitle"
            layout="@layout/base_title_mvvm_layout"
            app:layout_constraintTop_toTopOf="parent" />

        <com.okla.ops.custom.cabinetopt.SelectCabinetAndAuthorizationView
            android:id="@+id/vSelectCabinet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            app:SelectCabinetAndAuthorizationHint="@string/cabinet_opt_select_cabinet"
            app:SelectCabinetAndAuthorizationIsShowLine="true"
            app:SelectCabinetAndAuthorizationTitle="@string/cabinet_opt_switch_cabinet"
            app:layout_constraintTop_toBottomOf="@id/includeTitle" />

        <com.okla.ops.custom.cabinetopt.SelectCabinetAndAuthorizationView
            android:id="@+id/vSelectAuthorization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:SelectCabinetAndAuthorizationHint="@string/cabinet_opt_select_authorization"
            app:SelectCabinetAndAuthorizationTitle="@string/cabinet_opt_switch_authorization"
            app:layout_constraintTop_toBottomOf="@id/vSelectCabinet" />

        <View
            android:id="@+id/bg_date"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:layout_marginTop="12dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/vSelectAuthorization" />

        <TextView
            android:id="@+id/tvAuthorizationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:text="@string/cabinet_opt_authorization_date"
            android:textColor="@color/color_b30c0c0d"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/bg_date" />

        <TextView
            android:id="@+id/tvAuthorizationBegin"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/vLine1"
            app:layout_constraintTop_toBottomOf="@id/tvAuthorizationDate"
            tools:text="2023-08-31 23:00:00" />

        <View
            android:id="@+id/vLine1"
            android:layout_width="15dp"
            android:layout_height="1dp"
            android:background="@color/color_800c0c0d"
            app:layout_constraintBottom_toBottomOf="@id/tvAuthorizationBegin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvAuthorizationBegin" />

        <TextView
            android:id="@+id/tvAuthorizationEnd"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            app:layout_constraintLeft_toRightOf="@id/vLine1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAuthorizationDate"
            tools:text="2023-08-31 23:00:00" />

        <TextView
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_maincolor_r8"
            android:gravity="center"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/cabinet_opt_authorization_confirm"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/bg_date" />

        <TextView
            android:id="@+id/btnRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_ffffff_r8"
            android:gravity="center"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/cabinet_opt_authorization_record"
            android:textColor="@color/color_e60c0c0d"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/btnConfirm" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>