<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_top_r16_ffffff">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvToday"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/text_today"
            android:textColor="@color/selector_text_ff08983b_3"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvYesterday"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/text_yesterday"
            android:textColor="@color/selector_text_ff08983b_3"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvToday" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMonth"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/text_this_month"
            android:textColor="@color/selector_text_ff08983b_3"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvYesterday" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOtherDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/text_other_date"
            android:textColor="@color/selector_text_ff08983b_3"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMonth" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDateStart"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_f5f8fb_r8"
            android:drawableEnd="@drawable/icon_arrow_down1"
            android:gravity="center_vertical"
            android:hint="@string/text_start_time"
            android:paddingHorizontal="10dp"
            android:textColor="@color/color_e6000000"
            android:textColorHint="@color/color_99000000"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/vLine2"
            app:layout_constraintEnd_toStartOf="@id/vLine1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOtherDate"
            tools:text="2024/11/01" />

        <View
            android:id="@+id/vLine1"
            android:layout_width="10dp"
            android:layout_height="1dp"
            android:background="@color/color_e6000000"
            app:layout_constraintBottom_toTopOf="@id/vLine2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOtherDate" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDateEnd"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/bg_f5f8fb_r8"
            android:drawableEnd="@drawable/icon_arrow_down1"
            android:gravity="center_vertical"
            android:hint="@string/text_end_time"
            android:paddingHorizontal="10dp"
            android:textColor="@color/color_e6000000"
            android:textColorHint="@color/color_99000000"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/vLine2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/vLine1"
            app:layout_constraintTop_toBottomOf="@id/tvOtherDate"
            tools:text="2024/12/01" />

        <View
            android:id="@+id/vLine2"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="58dp"
            android:background="@color/color_f0f2f5"
            app:layout_constraintTop_toBottomOf="@id/tvOtherDate" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/Cancel"
            android:textColor="@color/color_e6000000"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vLine2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
